[project]
name = "gists"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "py7zr>=0.22.0",
    "cryptography>=43.0.3",
    "discord>=2.3.2",
    "pyyaml>=6.0.2",
    "zuu>=3.0.2",
    "pymediawiki==0.7.3",
    "moviepy>=1.0.3",
    "zuu-va>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gists"]
